--- a/app/views/layouts/purestyle.html.erb
+++ b/app/views/layouts/purestyle.html.erb
@@ -42,7 +42,6 @@
     #footer .nav_cust div:last-child{
       width: 24%;
     text-align: center;
-    font-size: 60%;
     font-weight: bolder;
     border-right: none;
     letter-spacing:1px;
@@ -59,16 +58,16 @@
             </a></div>
         <div class="pure-u-1-4"><a class="nav_item" href="#">
             <span id="icon2">&nbsp; &nbsp;&nbsp;</span><br>
-            <span>成为BOSS</span>
+            <span>成为UBOSS</span>
         </div>
         <div class="pure-u-1-4"><a class="nav_item" href="#">
             <span id="icon3">&nbsp; &nbsp;&nbsp;</span><br>
-            <span>BOSS学堂</span>
+            <span>UBOSS学堂</span>
         </a>
         </div>
         <div class="pure-u-1-4"><a class="nav_item" href="#">
             <span id="icon4">&nbsp; &nbsp;&nbsp;</span><br>
-            <span>关于</span>
+            <span>关于Uboss</span>
         </a>
         </div>
     </div>
