--- a/app/views/mobile_view/regist.html.erb
+++ b/app/views/mobile_view/regist.html.erb
@@ -7,80 +7,96 @@
 <div style="width:80%; padding:5% 10%; margin:0">
 	<div style="border:1px solid #9a9a9a; padding:5% 10%">
 		<div>
-			<form class="pure-form pure-g" id="registForm">
+			<%= form_for @user, url: users_register_path, :html => {:class => "pure-form pure-g", :onsubmit => "return registOnSubmit()", :id => "registForm"} do |f| %>
 
-
-				<div id="tips_username" class="pure-u-1" style="color: #ff0000; padding: 0"></div>
+				<div id="tips_username" class="pure-u-1" style="color: #ff0000; padding: 0; height: 0"></div>
 				<div class="pure-u-1" style="padding:5% 0">
 					<div class="pure-u-1-7"></div>
 					<div class="pure-u-5-7">
-						<input id="username" type="text" 
-						placeholder="用户名(5～16个数字或字母)" class="pure-u-1" onblur="checkOnBlur(this)" onkeyup="checkOnKeyUp(this)">
+						<%= f.text_field :username, 
+                        	class: "pure-u-1", 
+                         	id: "username",
+                        	placeholder: "用户名(5～16个数字或字母)", 
+                        	inputtype: "username",
+                        	onblur: 'checkOnBlur(this)', 
+                        	onkeyup: 'checkOnKeyUp(this)'  %>
 					</div>
 					<div class="pure-u-1-7"></div>    
 				</div>
 
-				<br/>
-				<br/>
-
-				<div id="tips_email" class="pure-u-1" style="color: #ff0000; padding: 0"></div>
+				<div id="tips_email" class="pure-u-1" style="color: #ff0000; padding: 0; height: 0"></div>
 				<div class="pure-u-1" style="padding:5% 0">
 					<div class="pure-u-1-7"></div>
 					<div class="pure-u-5-7">
-						<input id="email" type="text" placeholder="邮箱" class="pure-u-1" onblur="checkOnBlur(this)" onkeyup="checkOnKeyUp(this)">
+						<%= f.email_field :email, 
+                        	class: "pure-u-1", 
+                        	id: "email",
+                        	placeholder: "邮箱", 
+                        	inputtype: "email",
+                        	onblur: "checkOnBlur(this)", 
+                        	onkeyup: "checkOnKeyUp(this)" %>
 					</div>
 					<div class="pure-u-1-7"></div>    
 				</div>
 
-				<br/>
-				<br/>
-
-				<div id="tips_pwd" class="pure-u-1" style="color: #ff0000; padding: 0"></div>
+				<div id="tips_pwd" class="pure-u-1" style="color: #ff0000; padding: 0; height: 0"></div>
 				<div class="pure-u-1" style="padding:5% 0">
 					<div class="pure-u-1-7"></div>
 					<div class="pure-u-5-7">
-						<input id="pwd" type="password" placeholder="密码(8~20个数字和字母，必须包含数字和字母)" class="pure-u-1" onblur="checkOnBlur(this)" onkeyup="checkOnKeyUp(this)">
+						<%= f.password_field :password, 
+                        	class: "pure-u-1", 
+                        	id: "pwd", 
+                        	placeholder: "密码(8~20个数字和字母，必须包含数字和字母)", 
+                        	inputtype: "pwd",
+                        	onblur: "checkOnBlur(this)", 
+                        	onkeyup: "checkOnKeyUp(this)" %>
 					</div>
 					<div class="pure-u-1-7"></div>    
 				</div>
 
-				<br/>
-				<br/>
-
-				<div id="tips_pwd2" class="pure-u-1" style="color: #ff0000; padding: 0"></div>
+				<div id="tips_pwd2" class="pure-u-1" style="color: #ff0000; padding: 0; height: 0"></div>
 				<div class="pure-u-1" style="padding:5% 0">
 					<div class="pure-u-1-7"></div>
 					<div class="pure-u-5-7">
-						<input id="pwd2" type="password" placeholder="确认密码" class="pure-u-1" onblur="checkOnBlur(this)" onkeyup="checkOnKeyUp(this)">
+						<%= f.password_field :password_confirm, 
+                        	class: "pure-u-1", 
+                        	id: "pwd2", 
+                        	placeholder: "确认密码", 
+                        	inputtype: "pwd2",
+                        	onblur: "checkOnBlur(this)", 
+                        	onkeyup: "checkOnKeyUp(this)" %>
 					</div>
 					<div class="pure-u-1-7"></div>    
 				</div>
 
-				<br/>
 				<div class="pure-u-1">
-					<input type="checkbox" id="checkbox_agree" onclick="onTouchAgree()">服务协议
+					<input type="checkbox" id="checkbox_agree" ontouchstart="onTouchAgree()">服务协议
 				</div>
-				<br/>
 
 				<div class="pure-u-1" style="padding:5% 0">
 					<div class="pure-u-1-7"></div>
 					<div class="pure-u-5-7">
-						<button id="btn_regist" type="submit" class="pure-button pure-u-1 pure-button-primary" onclick="registOnSubmit()">注 册</button>     
+						<button id="btn_regist" type="submit" class="pure-button pure-u-1 pure-button-primary" ontouchstart="registOnTouch()" style="padding:10px">注 册</button>     
 					</div>
 					<div class="pure-u-1-7"></div>    
 				</div>
 
-				<br/>
-				<br/>
 
 				<div class="pure-u-1" >
 					<div class="pure-u-1-7"></div>
 					<div class="pure-u-5-7">
-						<label>已有账号？</label> <a href="">点我啊猪</a>  
+						<label>已有账号？</label> <a href="<%= mobile_view_login_path %>">点我啊猪</a>  
 					</div>
 					<div class="pure-u-1-7"></div>    
 				</div>
-			</form>
+				<%= f.text_field :from_mobile, 
+					class: "pure-u-1", 
+                    id: "pwd2", 
+                    placeholder: "确认密码", 
+                    inputtype: "pwd2",
+                    type: "hidden" %>
+				
+			<% end %>
 		</div>
 	</div>
 </div>
@@ -169,16 +185,14 @@
         }
 
         hideTips(type);
+        validate[type] = true;
 
         switch (type)
         {
             case "username":
             case "email":
                 form[type] = value;
-                if (checkExist(type)){
-                    checkAllAndSetBtnRegist();
-                    return;
-                }
+                checkExist(type);
                 break;
             case "pwd":
             case "pwd2":
@@ -190,9 +204,6 @@
                 break;
         }
 
-        hideTips(type);
-        validate[type] = true;
-        form[type] = value;
         checkAllAndSetBtnRegist();
         return;
     }
@@ -239,7 +250,7 @@
 
 	function checkExist(type){
         btnRegist.innerHTML = '<img alt="uboss" width="34px" height="34px" src="/assets/loading2-a58ad9937c8c60f1579b0d599b9f940e.gif">';
-        btnRegist.style.padding = 7;
+        btnRegist.style.padding = 0;
         var validateResult = false;
         var xmlhttp;		
 		var addr = checkExistAddr[type];
@@ -251,29 +262,37 @@
 		else {
 			xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
 		}
-		xmlhttp.open("GET",addr,false);
+		xmlhttp.open("GET",addr);
 		xmlhttp.send();
-		switch (eval(xmlhttp.responseText)){
-			case 0:
-				validate[type] = false;
-				tryShowTips(existTips, type);
-				validateResult = true;
-				break;
-			case 1:
-				validate[type] = true;
-				hideTips(type);
-				validateResult = false;
-				break;
-			default:
+		xmlhttp.onreadystatechange = function() { 
+			if ((xmlhttp.readyState == 4) && (xmlhttp.status == 200)) { 
+				switch (eval(xmlhttp.responseText)){
+					case 0:
+						validate[type] = false;
+						tryShowTips(existTips, type);
+						validateResult = true;
+						break;
+					case 1:
+						validate[type] = true;
+						hideTips(type);
+						validateResult = false;
+						break;
+					default:
+						validate[type] = false;
+						tryShowTips(existTips, type, true);
+						validateResult = true;
+						break;
+				}
+			}
+			else { 
 				validate[type] = false;
 				tryShowTips(existTips, type, true);
 				validateResult = true;
-				break;
+			}
+			btnRegist.innerHTML = "注 册";
+        	btnRegist.style.padding = "10px";
+			checkAllAndSetBtnRegist();
 		}
-		
-		btnRegist.innerHTML = "注 册";
-        btnRegist.style.padding = 7;
-        return validateResult;
     }
 
 	function checkAllAndSetBtnRegist(){
@@ -335,6 +354,10 @@
     }
 
     function registOnSubmit(){
+    	return true;
+    }
+
+    function registOnTouch(){
     	getElementById("registForm").submit();
     }
 </script>
