--- a/app/views/layouts/purestyle.html.erb
+++ b/app/views/layouts/purestyle.html.erb
@@ -58,7 +58,7 @@
             </a></div>
         <div class="pure-u-1-4"><a class="nav_item" href="#">
             <span id="icon2">&nbsp; &nbsp;&nbsp;</span><br>
-            <span>成为UBOSS</span>
+            <span>我的UBOSS</span>
         </div>
         <div class="pure-u-1-4"><a class="nav_item" href="#">
             <span id="icon3">&nbsp; &nbsp;&nbsp;</span><br>
