--- a/app/views/layouts/purestyle.html.erb
+++ b/app/views/layouts/purestyle.html.erb
@@ -52,7 +52,7 @@
 	<body>
   <div id="footer">
     <div class="nav_cust pure-g">
-        <div class="pure-u-1-4"><a class="nav_item" style="color:#FFFFFB; text-decoration:none;" href="<%= root_url %>" >
+        <div class="pure-u-1-4"><a class="nav_item" style="color:#FFFFFB; text-decoration:none;" href="<%= mobile_view_path %>" >
             <span id="icon1">&nbsp; &nbsp;&nbsp;</span><br>
             <span>主页</span>
             </a></div>
