--- a/app/views/mobile_view/address_confirm.html.erb
+++ b/app/views/mobile_view/address_confirm.html.erb
@@ -1,1 +1,113 @@
-<h1>确认订单</h1>
+<%= javascript_include_tag "md5.js" %>
+<%= javascript_include_tag "geo.js" %>
+<link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.5.0/forms-min.css">
+<style>
+html,body{ margin:0px; height:100%;} 
+.pure-form select{ margin-top: 10px; color:#57403b}
+.fontColor{
+    color:#57403b;
+}
+.fontColor1{
+    color:#1ab99b;
+}
+</style>
+<div style="position:relative; padding-top:2%; height:8%; text-align:center; font-size:20px; font-weight:bold" class="fontColor1">收 货 信 息</div>
+<div style="width:80%; padding:1% 10%; margin:0" class="fontColor">
+<div style="border:1px solid #9a9a9a; padding:5% 10%" class="fontColor">
+<div>
+<form class="pure-form pure-g fontColor" method="GET" action="<%= mobile_view_go_order_path %>">
+    <div class="pure-u-1" style="padding:2% 0">
+        <div class="pure-u-1-7"></div>
+        <div class="pure-u-5-7">
+            收货人<input id="receiver" name="recevier" type="text" placeholder="收货人" class="pure-u-1">
+        </div>
+        <div class="pure-u-1-7"></div> 
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="pure-u-1" style="padding:2% 0">
+        <div class="pure-u-1-7"></div>
+        <div class="pure-u-5-7">
+            手机号码<input id="telephone" name="telephone" type="number" placeholder="手机号码" class="pure-u-1">
+        </div>
+        <div class="pure-u-1-7"></div>    
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="pure-u-1" style="padding:2% 0">
+        <div class="pure-u-1-7"></div>
+        <div class="pure-u-5-7">
+        选择地区<br/><select class="select" name="province" id="s1">
+              <option></option>
+            </select>
+            <select class="select" name="city" id="s2">
+              <option></option>
+            </select>
+            <select class="select" name="town" id="s3">
+              <option></option>
+            </select>
+        <!--
+            选择地区<input id="areas" type="text" placeholder="选择地区" class="pure-u-1">
+            -->
+        </div>
+        <div class="pure-u-1-7"></div>    
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="pure-u-1" style="padding:2% 0">
+        <div class="pure-u-1-7"></div>
+        <div class="pure-u-5-7">
+            详细地址<input id="detailAddr" name="detailAddr" type="number" placeholder="详细地址" class="pure-u-1">
+        </div>
+        <div class="pure-u-1-7"></div>    
+    </div>
+
+    <div class="pure-u-1" style="padding:2% 0">
+        <div class="pure-u-1-7"></div>
+        <div class="pure-u-5-7">
+            邮政编码<input id="postal" name="postal" type="number" placeholder="邮政编码" class="pure-u-1">
+        </div>
+        <div class="pure-u-1-7"></div>    
+    </div>
+
+    <br/>
+    <br/>
+
+    <div class="pure-u-1" style="padding:5% 0">
+        <div class="pure-u-1-7"></div>
+        <div class="pure-u-5-7">
+            <button type="submit" class="pure-button pure-u-1 pure-button-primary">确 认</button>     
+        </div>
+        <div class="pure-u-1-7"></div>    
+    </div>
+
+    <br/>
+    <br/>
+</form>
+</div>
+</div>
+</div>
+
+<script>
+function checkReceiver(){
+    var receiver = "";
+    setup();
+    preselect('广东省');
+    promptinfo();
+}
+function promptinfo()
+{
+    var address = document.getElementById('addr');
+    var s1 = document.getElementById('s1');
+    var s2 = document.getElementById('s2');
+    var s3 = document.getElementById('s3');
+    address.value = s1.value + s2.value + s3.value;
+}
+window.onload = checkReceiver;
+</script>
