--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main_1">
+<!-- <div class="main_1">
     <%= image_tag 'first_banner.png', alt:"uboss" ,width: '100%' %>
     </div>
     <div class="main_2">
@@ -37,4 +37,8 @@
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
         <p>曾几何时我们迷茫无助，曾几何时我们激动疯狂</p>
        </div>
-    </div>
+</div>
+-->
+<div class="main_1" style="align:center; padding: 15% 0">
+  <div style="text-align:center"><font size="20%">Comming Soon.</font></div>
+</div>
