--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -45,7 +45,7 @@
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
                     <li class="active"><a href="<%= root_url %>">首页</a></li>
-                    <li><%= link_to '立刻挣钱', article_path(Article.where(:title => '立刻挣钱').first) %></li>
+                    <li><a href="">立刻挣钱</a></li>
                     <li><a href="">玩法介绍</a></li>
                     <li><a href="">下载APP</a></li>
 
@@ -60,10 +60,10 @@
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }  %>
                       </li>
-                    <li><a href="<%= personal_index_path %>">个人中心</a></li>
+                    <li><a href="">个人中心</a></li>
                     <% else %>
-                    <li id="tab_login"><a href="<%= new_session_url %>">登陆</a></li>
-                    <li><a href="<%= users_new_register_url %>">注册</a></li>
+                    <li id="tab_login"><a href="">登陆</a></li>
+                    <li><a href="">注册</a></li>
                     <% end %>
                     
                 </ul>
