--- a/app/views/layouts/purestyle.html.erb
+++ b/app/views/layouts/purestyle.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 
-<head> 
+  <head> 
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -11,6 +11,16 @@
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+
+    <![endif]-->
+    
+    
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/base-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/base-context-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/pure-min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.5.0/menus-min.css">
+    <%= stylesheet_link_tag "purestyle"%>
+
 
 
       <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.6.0/base-min.css">
@@ -27,65 +37,47 @@
       <!-- Size should be 114 x 114 pixels -->
       <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
 
-      <!-- For first- and second-generation iPad: -->
-      <!-- Size should be 72 x 72 pixels -->
-      <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
 
-      <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-      <!-- Size should be 57 x 57 pixels -->
-      <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+    <style>
+    #footer .nav_cust div:last-child{
+      width: 24%;
+    text-align: center;
+    font-weight: bolder;
+    border-right: none;
+    letter-spacing:1px;
+    color: white; 
+    }
+    </style>
+	</head>
+	<body>
 
-      <!-- For all other devices -->
-      <!-- Size should be 32 x 32 pixels -->
-      <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
-      <style>
-        #footer .nav_cust div:last-child{
-          width: 24%;
-          text-align: center;
-          font-weight: bolder;
-          border-right: none;
-          letter-spacing:1px;
-          color: white; 
-        }
-        a { text-decoration: none }
-  </style>
-</head>
-<body>
-    <%= javascript_include_tag "eventhelper.js" %>
-    <%= javascript_include_tag "auto_hide_footer_for_ios.js" %>
-    <%= yield %>
-    <br><br>
-    <div id="footer">
-        <div class="nav_cust pure-g">
-            <div class="pure-u-1-4">
-                <a class="nav_item" style="color:#FFFFFB; text-decoration:none;" href="<%= root_url %>" >
-                    <span id="icon1">&nbsp; &nbsp;&nbsp;</span><br>
-                    <span>主页</span>
-                </a>
-            </div>
-            <div class="pure-u-1-4">
-                <a class="nav_item" href="<%= personal_center_index_path %>">
-                    <span id="icon2">&nbsp; &nbsp;&nbsp;</span><br>
-                    <span>我的UBOSS</span>
-                </a>
-            </div>
-            <div class="pure-u-1-4">
-                <a class="nav_item" href="<%= mobile_view_yeepay_school_path %>">
-                    <span id="icon3">&nbsp; &nbsp;&nbsp;</span><br>
-                    <span>UBOSS学堂</span>
-                </a>
-            </div>
-            <div class="pure-u-1-4">
-                <a class="nav_item" href="<%= mobile_view_about_path %>">
-                    <span id="icon4">&nbsp; &nbsp;&nbsp;</span><br>
-                    <span>关于Uboss</span>
-                </a>
-            </div>
+          <%= yield %>
+          <br><br>
+  <div id="footer">
+    <div class="nav_cust pure-g">
+        <div class="pure-u-1-4"><a class="nav_item" style="color:#FFFFFB; text-decoration:none;" href="<%= root_url %>" >
+            <span id="icon1">&nbsp; &nbsp;&nbsp;</span><br>
+            <span>主页</span>
+            </a></div>
+        <div class="pure-u-1-4"><a class="nav_item" href="<%= personal_center_index_path %>">
+            <span id="icon2">&nbsp; &nbsp;&nbsp;</span><br>
+            <span>我的UBOSS</span>
+        </div>
+        <div class="pure-u-1-4"><a class="nav_item" href="<%= mobile_view_yeepay_school_path %>">
+            <span id="icon3">&nbsp; &nbsp;&nbsp;</span><br>
+            <span>UBOSS学堂</span>
+        </a>
+        </div>
+        <div class="pure-u-1-4"><a class="nav_item" href="<%= mobile_view_about_path %>">
+            <span id="icon4">&nbsp; &nbsp;&nbsp;</span><br>
+            <span>关于Uboss</span>
+        </a>
         </div>
     </div>
-
-<script type="text/javascript">
-</script>
+</div>    
 
 
 </body>
