--- a/app/views/mobile_view/login.html.erb
+++ b/app/views/mobile_view/login.html.erb
@@ -24,11 +24,22 @@ html,body{ margin:0px; height:100%;}
 <div style="width:80%; padding:5% 10%; margin:0">
 <div style="border:1px solid #9a9a9a; padding:5% 10%">
 <div>
-<form class="pure-form pure-g">
-    <div class="pure-u-1" style="padding:5% 0">
-        <div class="pure-u-1-7"></div>
-        <div class="pure-u-5-7">
-            <input id="name" type="text" placeholder="用户名" class="pure-u-1">
+
+    <%= form_for @user, url: mobile_view_auth_login_path, 
+        :html => {
+            :class => "pure-form pure-g-r", 
+            :id => "loginForm"
+        } do |f| %>
+        <div id="tips_mobile" class="pure-u-1" style="color: #ff0000; padding: 0"></div>
+        <div id="input_mobile" class="pure-u-1" style="padding:4% 0">
+            <div class="pure-u-1-7"></div>
+            <div class="pure-u-5-7">
+                <%= f.text_field :mobile, 
+                    class: "pure-u-1 auto_hide_footer_for_ios", 
+                    id: "mobile",
+                    placeholder: "手机号" %>
+            </div>
+            <div class="pure-u-1-7"></div>
 
         </div>
 
@@ -83,10 +94,12 @@ html,body{ margin:0px; height:100%;}
         </div>
 
 
-    <div class="pure-u-1" >
-        <div class="pure-u-1-7"></div>
-        <div class="pure-u-5-7">
-            <label>未注册？</label> <a href="<%= mobile_view_regist_path %>">马上注册</a>  
+        <div class="pure-u-1" style="padding:5% 0">
+            <div class="pure-u-1-7"></div>
+            <div class="pure-u-5-7">
+                <button id="btn_login" type="button" class="pure-button pure-u-1 pure-button-primary" ontouchstart="onTouchLogin()" style="padding:10px">登 录</button>     
+            </div>
+            <div class="pure-u-1-7"></div>    
 
         </div>
 
