--- a/app/views/mobile_view/login.html.erb
+++ b/app/views/mobile_view/login.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag "md5.js" %>
+<%= javascript_include_tag "eventhelper.js" %>
 <link rel="stylesheet" href="http://cdn.bootcss.com/pure/0.5.0/forms-min.css">
 <style>
 html,body{ margin:0px; height:100%;} 
