--- a/app/views/personal_center/withdraw.html.erb
+++ b/app/views/personal_center/withdraw.html.erb
@@ -14,9 +14,7 @@
 
  <div>最低提现金额100元。</div>
  <div>每月20号到月底才能申请提现哦～5个工作日内到账～～亲请耐心等待！</div>
- <% if notice %>
- <p class="notice"><%= notice %></p>
- <% end %>
+ <%= bootstrap_flash %>
  <div class="container">
  <%= form_for @withdraw_record , :html => { :class => "form-horizontal" } do |f| %>
   <div class="control-group">
