--- a/app/views/withdraw_records/edit.html.erb
+++ b/app/views/withdraw_records/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Withdraw Record</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @withdraw_record %> |
-<%= link_to 'Back', withdraw_records_path %>
+<%- model_class = WithdrawRecord -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
