--- a/app/views/withdraw_records/new.html.erb
+++ b/app/views/withdraw_records/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Withdraw Record</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', withdraw_records_path %>
+<%- model_class = WithdrawRecord -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
