--- a/app/views/withdraw_records/show.html.erb
+++ b/app/views/withdraw_records/show.html.erb
@@ -1,19 +1,27 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = WithdrawRecord -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Bank name:</strong>
-  <%= @withdraw_record.bank_name %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @withdraw_record.user_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:bank_name) %>:</strong></dt>
+  <dd><%= @withdraw_record.bank_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:bank_card) %>:</strong></dt>
+  <dd><%= @withdraw_record.bank_card %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
+  <dd><%= @withdraw_record.amount %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:done) %>:</strong></dt>
+  <dd><%= @withdraw_record.done %></dd>
+</dl>
 
-<p>
-  <strong>Bank card:</strong>
-  <%= @withdraw_record.bank_card %>
-</p>
-
-<p>
-  <strong>Amount:</strong>
-  <%= @withdraw_record.amount %>
-</p>
-
-<%= link_to 'Edit', edit_withdraw_record_path(@withdraw_record) %> |
-<%= link_to 'Back', withdraw_records_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              withdraw_records_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_withdraw_record_path(@withdraw_record), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              withdraw_record_path(@withdraw_record),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
