--- a/app/views/mobile_view/index.html.erb
+++ b/app/views/mobile_view/index.html.erb
@@ -1,13 +1,8 @@
 
 <div style="position: fixed; top: 10%; left:70%;z-index: 300; "><a href="<%= mobile_view_show_product_path+'?d=1' %>"><%= image_tag("btn_buy_rabbit.png", width: "90%") %></a></div>
 <div style="position:relative; font-size:0">
-	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("rabbit_00.png", width: "100%", padding:0, border:0, margin:0) %></div>
-	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("rabbit_0.png", width: "100%", padding:0, border:0, margin:0) %></div>
-	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("rabbit_1.png", width: "100%", padding:0, border:0, margin:0) %></div>
-	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("rabbit_2.png", width: "100%", padding:0, border:0, margin:0) %></div>
-	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("rabbit_3.png", width: "100%", padding:0, border:0, margin:0) %></div>
-	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("rabbit_4.png", width: "100%", padding:0, border:0, margin:0) %></div>
-	<div>
+	<div style="padding:0; margin:0; border:0; font-size:0"><%= image_tag("1.png", width: "100%", padding:0, border:0, margin:0) %></div>
+	
 	</div>	
 </div>
 
