--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -83,7 +83,7 @@
       
 
     </div> <!-- /container -->
-    <div class="bottom_div">@深圳市优易创网络有限公司</div>
+    <div class="bottom_div">@深圳市优来吧有限公司</div>
 
   </body>
   </html>
